// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should generate TypeScript user imports with absolute paths 1`] = `
"// NOTE: This file is auto-generated by React Cosmos.
// It imports all fixture and decorator modules, making them available to the
// React Cosmos renderer along with the renderer config.

import type { RendererConfig, UserModuleWrappers } from 'react-cosmos-core';

import '/Users/ovidiu/cosmos/src/polyfills';
import '/Users/ovidiu/cosmos/src/global.css';

import * as fixture0 from '/Users/ovidiu/cosmos/src/Counter/Counter.fixture';
import * as fixture1 from '/Users/ovidiu/cosmos/src/CounterButton/CounterButton.fixture';

import * as decorator0 from '/Users/ovidiu/cosmos/src/cosmos.decorator';

export const rendererConfig: RendererConfig = {
  "webSocketUrl": "ws://localhost:5002",
  "rendererUrl": null
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { module: fixture0 },
  'src/CounterButton/CounterButton.fixture.tsx': { module: fixture1 }
};

const decorators = {
  'src/cosmos.decorator.tsx': { module: decorator0 }
};

export const moduleWrappers: UserModuleWrappers = {
  lazy: false,
  fixtures,
  decorators
};
"
`;

exports[`should generate TypeScript user imports with relative paths 1`] = `
"// NOTE: This file is auto-generated by React Cosmos.
// It imports all fixture and decorator modules, making them available to the
// React Cosmos renderer along with the renderer config.

import type { RendererConfig, UserModuleWrappers } from 'react-cosmos-core';

import './polyfills';
import './global.css';

import * as fixture0 from './Counter/Counter.fixture';
import * as fixture1 from './CounterButton/CounterButton.fixture';

import * as decorator0 from './cosmos.decorator';

export const rendererConfig: RendererConfig = {
  "webSocketUrl": "ws://localhost:5002",
  "rendererUrl": null
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { module: fixture0 },
  'src/CounterButton/CounterButton.fixture.tsx': { module: fixture1 }
};

const decorators = {
  'src/cosmos.decorator.tsx': { module: decorator0 }
};

export const moduleWrappers: UserModuleWrappers = {
  lazy: false,
  fixtures,
  decorators
};
"
`;

exports[`should generate user imports with absolute paths 1`] = `
"// NOTE: This file is auto-generated by React Cosmos.
// It imports all fixture and decorator modules, making them available to the
// React Cosmos renderer along with the renderer config.

import '/Users/ovidiu/cosmos/src/polyfills.ts';
import '/Users/ovidiu/cosmos/src/global.css';

import * as fixture0 from '/Users/ovidiu/cosmos/src/Counter/Counter.fixture.tsx';
import * as fixture1 from '/Users/ovidiu/cosmos/src/CounterButton/CounterButton.fixture.tsx';

import * as decorator0 from '/Users/ovidiu/cosmos/src/cosmos.decorator.tsx';

export const rendererConfig = {
  "webSocketUrl": "ws://localhost:5002",
  "rendererUrl": null
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { module: fixture0 },
  'src/CounterButton/CounterButton.fixture.tsx': { module: fixture1 }
};

const decorators = {
  'src/cosmos.decorator.tsx': { module: decorator0 }
};

export const moduleWrappers = {
  lazy: false,
  fixtures,
  decorators
};
"
`;

exports[`should generate user imports with relative paths 1`] = `
"// NOTE: This file is auto-generated by React Cosmos.
// It imports all fixture and decorator modules, making them available to the
// React Cosmos renderer along with the renderer config.

import './polyfills.ts';
import './global.css';

import * as fixture0 from './Counter/Counter.fixture.tsx';
import * as fixture1 from './CounterButton/CounterButton.fixture.tsx';

import * as decorator0 from './cosmos.decorator.tsx';

export const rendererConfig = {
  "webSocketUrl": "ws://localhost:5002",
  "rendererUrl": null
};

const fixtures = {
  'src/Counter/Counter.fixture.tsx': { module: fixture0 },
  'src/CounterButton/CounterButton.fixture.tsx': { module: fixture1 }
};

const decorators = {
  'src/cosmos.decorator.tsx': { module: decorator0 }
};

export const moduleWrappers = {
  lazy: false,
  fixtures,
  decorators
};
"
`;
